monitor/ingress/metrics-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-metrics
  namespace: default
  labels:
    app: prometheus-app
spec:
  type: ClusterIP
  selector:
    app: prometheus-app
  ports:
    - name: http
      port: 80        # Service listens on 80
      targetPort: 8000  # Forwards to pod port 8000
